--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.0.3) olivia; urgency=low
+
+  * 1.0.3
+
+ -- Clement Lefebvre <clem@toshiba>  Fri, 29 Mar 2013 17:54:25 +0000
+
 mintsources (1.0.2) olivia; urgency=low
 
   * 1.0.2
