--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.0.4) olivia; urgency=low
+
+  * 1.0.4
+
+ -- Clement Lefebvre <clem@vaio>  Sat, 30 Mar 2013 14:57:27 +0000
+
 mintsources (1.0.3) olivia; urgency=low
 
   * 1.0.3
