--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.0.5) olivia; urgency=low
+
+  * 1.0.5
+
+ -- Clement Lefebvre <clem@vaio>  Thu, 04 Apr 2013 12:40:21 +0100
+
 mintsources (1.0.4) olivia; urgency=low
 
   * 1.0.4
