--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.0.6) olivia; urgency=low
+
+  * 1.0.6
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 08 Apr 2013 13:34:12 +0100
+
 mintsources (1.0.5) olivia; urgency=low
 
   * 1.0.5
