--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.0.7) olivia; urgency=low
+
+  * 1.0.7
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 09 Apr 2013 09:13:03 +0100
+
 mintsources (1.0.6) olivia; urgency=low
 
   * 1.0.6
