--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.0.9) olivia; urgency=low
+
+  * 1.0.9
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 09 Apr 2013 14:20:23 +0100
+
 mintsources (1.0.8) olivia; urgency=low
 
   * 1.0.8
