--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.1.1) olivia; urgency=low
+
+  * 1.1.1
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 25 Apr 2013 20:16:45 +0100
+
 mintsources (1.1.0) olivia; urgency=low
 
   * 1.1.0
