--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.1.2) olivia; urgency=low
+
+  * 1.1.2
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 01 May 2013 18:58:57 +0100
+
 mintsources (1.1.1) olivia; urgency=low
 
   * 1.1.1
