--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.1.3) olivia; urgency=low
+
+  * 1.1.3
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 14 May 2013 12:01:16 +0100
+
 mintsources (1.1.2) olivia; urgency=low
 
   * 1.1.2
