--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.1.4) olivia; urgency=low
+
+  * 1.1.4
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sat, 18 May 2013 13:46:24 +0100
+
 mintsources (1.1.3) olivia; urgency=low
 
   * 1.1.3
