--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.1.5) olivia; urgency=low
+
+  * 1.1.5
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 21 May 2013 14:21:24 +0100
+
 mintsources (1.1.4) olivia; urgency=low
 
   * 1.1.4
