--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.1.6) olivia; urgency=low
+
+  * 1.1.6
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 23 May 2013 16:13:41 +0100
+
 mintsources (1.1.5) olivia; urgency=low
 
   * 1.1.5
