--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.1.7) olivia; urgency=low
+
+  * 1.1.7
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sun, 21 Jul 2013 15:41:43 +0200
+
 mintsources (1.1.6) olivia; urgency=low
 
   * 1.1.6
