--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.1.8) olivia; urgency=low
+
+  * 1.1.8
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 18 Sep 2013 10:57:13 +0100
+
 mintsources (1.1.7) olivia; urgency=low
 
   * 1.1.7
