--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.1.9) petra; urgency=low
+
+  * 1.1.9
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 01 Oct 2013 10:52:41 +0100
+
 mintsources (1.1.8) olivia; urgency=low
 
   * 1.1.8
