--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.2.0) petra; urgency=low
+
+  * 1.2.0
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sat, 19 Oct 2013 16:37:02 +0100
+
 mintsources (1.1.9) petra; urgency=low
 
   * 1.1.9
