--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.2.1) petra; urgency=low
+
+  * 1.2.1
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sun, 24 Nov 2013 18:41:11 +0000
+
 mintsources (1.2.0) petra; urgency=low
 
   * 1.2.0
