--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.2.2) debian; urgency=low
+
+  * 1.2.2
+
+ -- Clement Lefebvre <root@linuxmint.com>  Fri, 31 Jan 2014 17:10:40 +0000
+
 mintsources (1.2.1) petra; urgency=low
 
   * 1.2.1
