--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.2.4) qiana; urgency=medium
+
+  * 1.2.4
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 07 Apr 2014 15:59:24 +0100
+
 mintsources (1.2.3) debian; urgency=low
 
   * 1.2.3
