--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.2.5) qiana; urgency=medium
+
+  * 1.2.5
+
+ -- Clement Lefebvre <root@linuxmint.com>  Fri, 02 May 2014 16:11:52 +0100
+
 mintsources (1.2.4) qiana; urgency=medium
 
   * 1.2.4
