--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.2.6) qiana; urgency=medium
+
+  * 1.2.6
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sat, 03 May 2014 18:50:02 +0100
+
 mintsources (1.2.5) qiana; urgency=medium
 
   * 1.2.5
