--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.2.7) qiana; urgency=medium
+
+  * 1.2.7
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sun, 04 May 2014 14:50:48 +0100
+
 mintsources (1.2.6) qiana; urgency=medium
 
   * 1.2.6
