--- a/mintsources.pot
+++ b/mintsources.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-06 14:15+0100\n"
+"POT-Creation-Date: 2014-05-06 16:31+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -59,7 +59,7 @@ msgid ""
 "are made available, the development team publishes an official announcement "
 "on http://blog.linuxmint.com. This announcement might include important "
 "information about the new features, design decisions or even known issues "
-"wich relate to you. It is therefore strongly recommended to not enable "
+"which relate to you. It is therefore strongly recommended to not enable "
 "backports until you have read this information. Are you sure you want to "
 "enable backports?"
 msgstr ""
