--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.2.9) qiana; urgency=medium
+
+  * 1.2.9
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 06 May 2014 16:31:53 +0100
+
 mintsources (1.2.8) qiana; urgency=medium
 
   * 1.2.8
