--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.3.0) qiana; urgency=medium
+
+  * 1.3.0
+
+ -- Clement Lefebvre <root@linuxmint.com>  Fri, 16 May 2014 14:34:58 +0100
+
 mintsources (1.2.9) qiana; urgency=medium
 
   * 1.2.9
