--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.3.1) qiana; urgency=medium
+
+  * 1.3.1
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 21 May 2014 10:24:43 +0100
+
 mintsources (1.3.0) qiana; urgency=medium
 
   * 1.3.0
