--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.3.2) qiana; urgency=medium
+
+  * 1.3.2
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 21 May 2014 10:26:36 +0100
+
 mintsources (1.3.1) qiana; urgency=medium
 
   * 1.3.1
