--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+mintsources (1.3.4) qiana; urgency=medium
+
+  [ Frédéric Gaudet ]
+  * Add trailing semicolon
+  * Hide desktop file when DE= KDE
+  * Do not show Gnome desktop file under KDE
+  * Update translations
+
+  [ Corbin ]
+  * Changed dist icon for qiana
+
+  [ Gwendal Le Bihan ]
+  * List PPAs as additional repositories when PPAs aren't supported
+  * Don't allow adding PPAs when not supported
+
+  [ Clement Lefebvre ]
+  * Improved Qiana icon
+
+ -- Clement Lefebvre <root@linuxmint.com>  Fri, 06 Jun 2014 16:21:05 +0100
+
 mintsources (1.3.3) qiana; urgency=low
 
   * [8ce6fca] KDE desktop file generation
