--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+mintsources (1.3.5) rebecca; urgency=medium
+
+  * Added rebecca and betsy support
+  * Fixed deletion of repository when it contained '#'
+  * Enabled add-apt-repository to work in automation scripts
+  * Provides software-properties-kde|gtk|common
+  * Parallel mirror scan
+  * Improved repository names, sorted tables in ASC order
+  * Mirror selection: changed speed bars for text (Gdk randomly segfaulted)
+  * Added retry mechanism on timeout and now remove erroneous mirrors from the list
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 22 Sep 2014 13:24:48 +0200
+
 mintsources (1.3.4) qiana; urgency=medium
 
   [ Frédéric Gaudet ]
