--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.3.6) rebecca; urgency=medium
+
+  * l10n'd Maintenance button label
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 03 Nov 2014 10:15:28 +0100
+
 mintsources (1.3.5) rebecca; urgency=medium
 
   * Added rebecca and betsy support
