--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.3.8) rebecca; urgency=medium
+
+  * Speed tests: limit the number of concurrent threads to 80 (fixes crash in 32-bit when selecting a base mirror)
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 21 Jan 2015 10:56:28 +0100
+
 mintsources (1.3.7) rebecca; urgency=medium
 
   * Set the window to non-resizable (In GTK2 text-wrapping only works by redefining the label allocation dynamically, this is a limitation of the toolkit. It works but the side-effect is that it never shrinks back when the window is resized.)
