--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mintsources (1.3.9) rebecca; urgency=medium
+
+  * Really provide software-properties packages. Instructions on 3rd party websites incite Mint users to explicitly install software-properties packages. This commit makes these instructions harmless whereas they would previously remove mint-metas, mintsources and break the ability to add PPAs.
+  * Made the mintsources package essential
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sun, 25 Jan 2015 14:19:25 +0100
+
 mintsources (1.3.8) rebecca; urgency=medium
 
   * Speed tests: limit the number of concurrent threads to 80 (fixes crash in 32-bit when selecting a base mirror)
