--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mintsources (1.4.0) rebecca; urgency=medium
+
+  * Added new add PPA confirmation dialog to better handle long PPA descriptions
+  * Only allow repository definitions starting with "deb" in 3rd party repositories
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 04 Feb 2015 09:42:32 +0100
+
 mintsources (1.3.9) rebecca; urgency=medium
 
   * Really provide software-properties packages. Instructions on 3rd party websites incite Mint users to explicitly install software-properties packages. This commit makes these instructions harmless whereas they would previously remove mint-metas, mintsources and break the ability to add PPAs.
