--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.4.1) betsy; urgency=medium
+
+  * Updated authentications keys for Betsy
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 26 Feb 2015 12:33:44 +0100
+
 mintsources (1.4.0) rebecca; urgency=medium
 
   * Added new add PPA confirmation dialog to better handle long PPA descriptions
