--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.4.2) betsy; urgency=medium
+
+  * Speed tests: Don't remove mirrors from the list when they fail or timeout (we'll need to view/filter them, removing them from the model leads to segfaults)
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 12 Mar 2015 16:02:15 +0100
+
 mintsources (1.4.1) betsy; urgency=medium
 
   * Updated authentications keys for Betsy
