--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+mintsources (1.4.3) rafaela; urgency=medium
+
+  [ darealshinji ]
+  * Add man pages
+
+  [ Timothy Sharitt ]
+  * Auto paste PPA and deb lines from clipboard
+
+  [ Corbin ]
+  * Replace gross 'burnt' Linux Mint Icons with the nice ones
+
+  [ Clement Lefebvre ]
+  * Improved repository name identification
+  * Added support for Rafaela
+
+ -- Clement Lefebvre <root@linuxmint.com>  Fri, 05 Jun 2015 17:06:45 +0200
+
 mintsources (1.4.2) betsy; urgency=medium
 
   * Speed tests: Don't remove mirrors from the list when they fail or timeout (we'll need to view/filter them, removing them from the model leads to segfaults)
