--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.4.6) rafaela; urgency=medium
+
+  * Added desktop item to Xfce settings
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 09 Jul 2015 12:42:17 +0200
+
 mintsources (1.4.5) rafaela; urgency=medium
 
   * Make foreign packages window and ppa window modal
