--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.5.1) rosa; urgency=medium
+
+  * Fixed testing the wrong url for up-to-date tests Also, don't perform that test on base layer mirrors
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 19 Nov 2015 12:25:00 +0000
+
 mintsources (1.5.0) rosa; urgency=medium
 
   * mint-switch-to-local-mirror: Add support for live installation mode
