--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.5.4) sarah; urgency=medium
+
+  * Added support for Sarah
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 07 Mar 2016 11:33:02 +0000
+
 mintsources (1.5.3) sarah; urgency=medium
 
   [ jstnlth ]
