--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.5.6) sarah; urgency=medium
+
+  * Added Sarah key
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 26 May 2016 15:57:35 +0100
+
 mintsources (1.5.5) sarah; urgency=medium
 
   [ Ryan Rafe Lee ]
