--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.5.7) sarah; urgency=medium
+
+  * Removed backports from warning message
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 06 Jun 2016 11:21:19 +0100
+
 mintsources (1.5.6) sarah; urgency=medium
 
   * Added Sarah key
