--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.5.9) sarah; urgency=medium
+
+  * Don't rely on "lsb_release -u"
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 13 Jun 2016 13:07:42 +0100
+
 mintsources (1.5.8) sarah; urgency=medium
 
   * Don't use hardcoded colors
