--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.6.9) sylvia; urgency=medium
+
+  * Add support for Linux Mint 18.3
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 07 Nov 2017 11:12:42 +0000
+
 mintsources (1.6.8) sylvia; urgency=medium
 
   [ monsta ]
