--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.7.8) tara; urgency=medium
+
+  * Apt keys: Identify GPG keys by their short pub (last two parts)
+
+ -- Clement Lefebvre <root@linuxmint.com>  Fri, 18 May 2018 09:49:06 +0100
+
 mintsources (1.7.7) tara; urgency=medium
 
   * Fix adding PPAs
