--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.7.9) tara; urgency=medium
+
+  * Add message in polkit policy
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 30 May 2018 18:25:18 +0100
+
 mintsources (1.7.8) tara; urgency=medium
 
   * Apt keys: Identify GPG keys by their short pub (last two parts)
