--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.8.8) tina; urgency=medium
+
+  * Remove Python 3.6 code
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 05 Aug 2019 11:57:15 +0200
+
 mintsources (1.8.7) tina; urgency=medium
 
   * MergeList: Don't delete the list directory itself
