--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.9.4) debbie; urgency=medium
+
+  * Switch Debian repo to https
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 21 Jan 2020 14:28:17 +0000
+
 mintsources (1.9.3) debbie; urgency=medium
 
   * Add support for LMDE 4 Debbie
