--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (1.9.7) debbie; urgency=medium
+
+  * LMDE 4: Remove deb-multimedia
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 13 Feb 2020 10:51:34 +0000
+
 mintsources (1.9.6) debbie; urgency=medium
 
   * LMDE 4: Add backports repository
