--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (2.0.2) ulyana; urgency=medium
+
+  * Don't provide python-software-properties
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 17 Jun 2020 16:39:33 +0100
+
 mintsources (2.0.1) ulyana; urgency=medium
 
   [ Vincent Vermeulen ]
