--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (2.0.0.2) tricia; urgency=medium
+
+  * Allow downgrade of critical packages
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sat, 18 Jul 2020 17:11:43 +0100
+
 mintsources (2.0.0.1) tricia; urgency=medium
 
   [ Vincent Vermeulen ]
