--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (2.0.5) ulyana; urgency=medium
+
+  * Allow downgrade of critical packages
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sat, 18 Jul 2020 17:18:30 +0100
+
 mintsources (2.0.4) ulyana; urgency=medium
 
   * Foreign packages: Find packages more accurately
