--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (2.1.3) elsie; urgency=medium
+
+  * LMDE 5: Add older keys
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 19 Jan 2022 17:37:51 +0000
+
 mintsources (2.1.2) elsie; urgency=medium
 
   * LMDE 5: Fix security URL
