--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (2.1.5) elsie; urgency=medium
+
+  * LMDE 5: Fix security URL in for deb-src repository
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 09 Feb 2022 15:38:38 +0000
+
 mintsources (2.1.4) elsie; urgency=medium
 
   * LMDE 5: Add missing space in some public keys
