--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (2.1.9) vanessa; urgency=medium
+
+  * l10n: Update POT
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 04 Aug 2022 11:57:32 +0200
+
 mintsources (2.1.8) vanessa; urgency=medium
 
   [ Vincent Vermeulen ]
