--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mintsources (2.2.1) vera; urgency=medium
+
+  * PPA: Initiate .gnupg dir before using gpg
+  * UI: Fix elements hidden by infobar
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 13 Dec 2022 16:50:18 +0000
+
 mintsources (2.2.0) vera; urgency=medium
 
   * Add support for Linux Mint 21.1 Vera
