--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (2.2.5) faye; urgency=medium
+
+  * Add support for LMDE 6 Faye
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 23 Aug 2023 12:41:26 +0100
+
 mintsources (2.2.4) faye; urgency=medium
 
   [ Michael Webster ]
