--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (2.2.8) virginia; urgency=medium
+
+  * Fix missing keys: Don't require /etc/apt/trusted.gpg
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 12 Dec 2023 16:31:43 +0000
+
 mintsources (2.2.7) virginia; urgency=medium
 
   [ Cem Temuçin ]
