--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (2.2.9) virginia; urgency=medium
+
+  * Add support for Mint 22 Wilma
+
+ -- Clement Lefebvre <root@linuxmint.com>  Fri, 02 Feb 2024 14:37:10 +0000
+
 mintsources (2.2.8) virginia; urgency=medium
 
   * Fix missing keys: Don't require /etc/apt/trusted.gpg
