--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mintsources (2.2.9.1) virginia; urgency=medium
+
+  * geoip: Add more debug info
+  * geoip: Switch to ip2location.io keyless API
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sun, 20 Oct 2024 19:12:06 +0200
+
 mintsources (2.2.9) virginia; urgency=medium
 
   * Add support for Mint 22 Wilma
