--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsources (2.3.6) zara; urgency=medium
+
+  * lmde: Fix debian.mirrors path
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sat, 06 Sep 2025 16:55:34 +0100
+
 mintsources (2.3.5) gigi; urgency=medium
 
   * Add support for LMDE 7 Gigi
